compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__bit_arrays__bit_array4.snap
---
source: compiler-core/src/fsharp/tests/bit_arrays.rs
expression: "\nfn x() { 1 }\npub fn go() {\n  let a = <<x():int>>\n  a\n}\n"
---
module rec my.``mod``
#nowarn "25" // Incomplete pattern matches on this expression.

let private x () = begin
    1L
end
let go () = begin
    let a = BitArray.Create(
        { endianness = None; size = None; unit = None; signed = None; value = BitArraySegmentValue.Int(x()) }
    )
    a
end
