compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__bit_arrays__bit_array_literal_string_is_treated_as_utf8.snap
---
source: compiler-core/src/fsharp/tests/bit_arrays.rs
expression: "\npub fn main() {\n  <<\"hello\", \" \", \"world\">>\n}"
---
module rec my.``mod``

[<EntryPoint>]
let main (_: string[]): int = begin
    BitArray.Create(
        { endianness = None; size = None; unit = None; signed = None; value = BitArraySegmentValue.Utf8(System.Text.Encoding.UTF8.GetBytes("hello")) }, 
        { endianness = None; size = None; unit = None; signed = None; value = BitArraySegmentValue.Utf8(System.Text.Encoding.UTF8.GetBytes(" ")) }, 
        { endianness = None; size = None; unit = None; signed = None; value = BitArraySegmentValue.Utf8(System.Text.Encoding.UTF8.GetBytes("world")) }
    )
end
