compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__bit_arrays__bit_array_literal_string_pattern_is_treated_as_utf8.snap
---
source: compiler-core/src/fsharp/tests/bit_arrays.rs
expression: "\npub fn go() {\n  case <<>> {\n    <<\"a\", \"b\", _:bytes>> -> 1\n    _ -> 2\n  }\n}"
---
module rec my.``mod``

let go () = begin
    match BitArray.Empty with
    | BitArray.Sections [BitArray.SizeOfUtf8("a"); BitArray.SizeOfUtf8("b")] [BitArraySegment.Utf8String("a"); BitArraySegment.Utf8String("b"); _] ->
        1L
    | _ ->
        2L
end
