compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__bit_arrays__bits.snap
---
source: compiler-core/src/fsharp/tests/bit_arrays.rs
expression: "\nfn go(x) {\n  <<x:bits>>\n}\n"
---
module rec my.``mod``

let private go (x: BitArray) = begin
    BitArray.Create(
        { endianness = None; size = None; unit = None; signed = None; value = BitArraySegmentValue.Bits(x) }
    )
end
